# My_Calculator

./: CMakeLists.txt  My_Calculator.sln  My_Calculator.vcxproj  My_Calculator.vcxproj.filters
.github/workflow/: ci.yml
My_Calculator/x64/Debug/: vc143.idb
My_Calculator/x64/Debug/My_Calculator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  My_Calculator.lastbuildstate
inc/: AddOperation.h  Calculator.h  DivideOperation.h  MultiplyOperation.h  SubtractOperation.h  stdafx.h
src/: AddOperation.cpp  Calculator.cpp  DivideOperation.cpp  MultiplyOperation.cpp  SubtractOperation.cpp  main.cpp
test/: CMakeLists.txt  CalculatorTest.cpp
